samples/_failures_safe/1761595233_fa46a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed2592b0.c: In function ‘peek_token’:
./samples/SAFE/__tmp_ed2592b0.c:175: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ed2592b0.c:174:5: error: expected declaration or statement at end of input
  174 |     if
      |     ^~
